# cipereusz-premium

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
cipbot/: __init__.py  config.py  tools.py
cipereusz_premium/: __main__.py  bot.py  config.py  llm.py  memory.py  persona.py  tools.py
